--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h3>About Me:</h3>
                     <h4>My hometown is Long Beach.</h4>
                     <h4>My favorite color is Blue.</h4>
-                    <h4>My favorite food is pizza.</h4>
+                    <h4>My favorite food is lasanga.</h4>
                     <h4>If I could be any animal, I would be a turtle.</h4>
             </div>
           </body>
